--- a/Css/header.css
+++ b/Css/header.css
@@ -1,4 +1,5 @@
 /*****PARTE DE HEADER YASMIN ANTONIO****/
+@media screen and  (max-width:136.5rem){
 *{
     margin: 0px;
     padding: 0px;
@@ -6,40 +7,60 @@
     box-sizing: border-box;
     
     font-size: 17px;
-    max-width: 1366px ;
     font-family: 'Didact Gothic', sans-serif;;
 }
-header{
+.sect{
+    width: 100%;
+    height: 1366px;
+}
+.header{
+    width: 100%;
     height: 10rem;
-    display: flex;
-    justify-content: space-between;
     padding: 16px; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.general{
+    width:97vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .logo{
     width: 73px;
     height: 73px;
     margin: 0;
+
 }
 .nav{
     list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
-    margin-left: 83rem;
-    margin-top: -6rem;
+    width: 100%;
+    justify-content: end;
+    padding: 1%;
+}
+.para_menu{
+    width: 70%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
-a{
+.para_img{
+    width: 30%;
+}
+.a{
     padding: 0px 16px ;
     color: #000000;
     
 }
 
-a:hover{
+.a:hover{
     background-color: var(--amarillo);
     border-radius: 2rem;
     padding: 10px 25px 10px 25px ;
     transition: 0.8s;
+}
 }
 /*@media screen and  (min-width:37.5rem){
     .boton{
