--- a/Css/footer.css
+++ b/Css/footer.css
@@ -1,47 +1,81 @@
+/*PAra footer*/
 #footer {
-    padding-top: 5rem;
+    padding-top: 8rem;
 }
-.infoInfood{
+.infofood{
     width: 100%;
     height: auto;
     margin: auto;
+    padding-top: 2rem;
     padding-bottom: 13.8rem;
-    
+    display: flex;
     justify-content: center;
     align-items: center;
+    background-color: aqua;
+    margin-bottom: 5rem;
     }
+    /*Cuadro rojo*/
     .ventana{
-     width: 50rem;
-     height: 15rem;
-     margin: auto;
-     background-color: var(--rojo);
-     border-radius: 2rem 2rem 2rem 2rem;
+    height: 25rem;
+    width: 85rem;
+    left: 156px;
+    top: 2457px;
+    padding:1.3%;
+    border-radius: 25px;   
+    background-color: var(--rojo);
+    border-radius: 2rem 2rem 2rem 2rem;
+    box-shadow:0px 5px 10px -2px #6e6e6e;
+    -moz-box-shadow:0px 5px 10px -2px #6e6e6e;
+    -webkit-box-shadow:0px 5px 10px -2px #6e6e6e;
+    display: flex;
     }
-    
+    /*Contenido de cuadro rojo*/
+    .izquierda{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    }
+    /*img de personaje*/
+    .derecha{
+    margin-left: -1.5rem;
+    margin-top: -4rem;
+    }
+    /*Parte Blanca*/
     .ventana_barra{
-        width: 50rem;
-        height: 3.5rem;
-        margin-top: 10rem;
-        border-radius: 2rem 2rem 2rem 2rem ;
+        height: 60px;
+        width: 100%;
+        margin-bottom: 5%;
+        border-radius: 10px;
         background-color: var(--blanco);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    
     .ventana_titulo{
-        margin-left: 2rem;
-        font-size: 2rem;
-        margin-top: 3rem;
+    color: var(--blanco);
+    font-size: 25px;
+    text-align: justify;
     }
     .ventana_titulo1{
-        margin-left: 20rem;
-        font-size: 2rem;
-    }
+    color: black;
+    font-family: Fredoka One;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 48px;
+    text-align: left;
     
+}
+        /*
+
     .padreFooter{
         display: flex;
         flex-direction:row-reverse;
         justify-content: center;
         align-items: center;
-        /* margin-bottom: 13.8rem; */
+       
     }
     
     .cuadro{
@@ -49,9 +83,9 @@
         height: 18rem;
         background-color: var(--amarillo);
         border-radius: 2rem 2rem 2rem 2rem;
-        margin-top: 1rem;
-        font-size: 1rem;
-        margin-left: -50rem;
+        box-shadow:0px 5px 10px -2px #6e6e6e;
+        -moz-box-shadow:0px 5px 10px -2px #6e6e6e;
+        -webkit-box-shadow:0px 5px 10px -2px #6e6e6e;
     
     }
     
@@ -85,13 +119,16 @@
         justify-content: center;
         flex-direction: column;
         border-radius: 2rem 2rem 2rem 2rem;
+        box-shadow:0px 5px 10px -2px #6e6e6e;
+        -moz-box-shadow:0px 5px 10px -2px #6e6e6e;
+        -webkit-box-shadow:0px 5px 10px -2px #6e6e6e;
     }
     .cuadrover_titulo1{
         margin-left: 3rem;
         font-size: 1.6rem;
         
         
-    }
+    }*/
     @media only screen and (max-width:37.5rem) {
         .padreFooter{
             max-width: 36.4rem;
