--- a/Css/footer.css
+++ b/Css/footer.css
@@ -154,7 +154,9 @@ list-style: none;
             justify-content: center;
             flex-direction: column;
         }
-    
+    .img_personaje{
+        display: none;
+    }
         .ventana{
             width: 50rem;
             height: 15rem;
