--- a/Css/header.css
+++ b/Css/header.css
@@ -1,5 +1,4 @@
 /*****PARTE DE HEADER YASMIN ANTONIO****/
-@media screen and  (max-width:136.5rem){
 *{
     margin: 0px;
     padding: 0px;
@@ -20,6 +19,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .general{
     width:97vw;
@@ -30,8 +30,6 @@
 .logo{
     width: 73px;
     height: 73px;
-    margin: 0;
-
 }
 .nav{
     list-style: none;
@@ -61,18 +59,33 @@
     padding: 10px 25px 10px 25px ;
     transition: 0.8s;
 }
-}
-/*@media screen and  (min-width:37.5rem){
-    .boton{
+
+@media screen and  (max-width:37.5rem){
+    /*.boton{
         display: none;
+    }*/
+    *{
+        font-size: 10px;
     }
-    .nav{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        margin-left: 83rem;
-        margin-top: -6rem;
+    .logo{
+        width: 40px;
+        height: 40px;
+    }
+    .para_menu{
+        width: 90%;
+    }
+    .para_img{
+        width: 10%;
+    }
+    .header{
+        height: 7rem;
+        padding: 0px;
+        justify-content: center;
         align-items: center;
     }
-}*/
+    .general{
+        margin: 0px;
+    }
+
+
+}
