--- a/Css/header.css
+++ b/Css/header.css
@@ -23,7 +23,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.general{
+.menu_principal{
     width:97vw;
     display: flex;
     flex-direction: row;
@@ -61,7 +61,7 @@
     padding: 10px 25px 10px 25px ;
     transition: 0.8s;
 }
-
+/*PARA TELEFONO*/
 @media screen and  (max-width:37.5rem){
     /*.boton{
         display: none;
@@ -69,9 +69,13 @@
     *{
         font-size: 10px;
     }
+    .menu_principal{
+        margin-top: 4%;
+    }
     .logo{
         width: 40px;
         height: 40px;
+
     }
     .para_menu{
         width: 90%;
@@ -80,7 +84,6 @@
         width: 10%;
     }
     .header{
-        height: 7rem;
         padding: 0px;
         justify-content: center;
         align-items: center;
@@ -91,3 +94,4 @@
 
 
 }
+
