--- a/Css/home.css
+++ b/Css/home.css
@@ -6,11 +6,11 @@ body{
 .vector{
     width: 100%;
     height: auto;
-    padding: 0px 5rem;
+    padding: 0px 4rem;
 
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .el-titulo{
     width: 50%;
@@ -37,12 +37,15 @@ body{
 
 @media screen and  (max-width:37.5rem){
 
+.sect .vector{
+    padding-left: 8.2rem;
+
+}
 .vector{
         width: 100%;
         height: 400px;
 }
 .titulo1{
-    width: 0%;
     display: none;   
 }
 .la-img{
