--- a/Css/areaInformativa1.css
+++ b/Css/areaInformativa1.css
@@ -53,7 +53,7 @@
 
     }
     .CuadroImg{
-        width: 85%;
+        width: 80%;
         margin-right: 200rem;
         height:40rem;
         margin: auto;
@@ -95,6 +95,7 @@
 @media screen and  (max-width:37.5rem){
     .Info{
        margin-top: 2rem; 
+       background-color: aqua;
     }
     
     .area{
@@ -123,14 +124,13 @@
     }
     .CuadroImg{
         flex-direction: column-reverse;
-        background-color: aqua;
-        width: 95%;
+        width: 100%;
         height: auto;
         justify-content: center;
         align-items: center;
     }
     .Info .TextoEncima{
-background-color: blue;
+        width: 94%;
     }
     .img2{
         display: none;
@@ -141,11 +141,18 @@ background-color: blue;
     .img2_visible{
         display: flex;
         flex-direction: column-reverse;
-        background-color: aqua;
+        background-image: url(../img/Group\ 33\ \(1\).png);
         width: 100%;
-        height: auto;
+        height: 40rem;
         justify-content: center;
         align-items: center;
+        margin-top: -12rem;
+    }
+    .img2V{
+        margin-top: 10rem;
+        width: 80%;
+        display: flex;
+
     }
 
 }
